# engram

./: .gitignore  Cargo.toml  README.md
bench/: engram_bench.env.example
crates/engram-ffi/: Cargo.toml
crates/engram-ffi/src/: lib.rs
crates/engram-store/: Cargo.toml
crates/engram-store/benches/: build_memory_packet.rs
crates/engram-store/src/: composer.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/engram-types/: Cargo.toml
crates/engram-types/src/: lib.rs
data/: engram.db
docs/: MemoryPacket v1 字段级规范表.md  blog_architecture_deep_dive.md  engram_deepseek_guide.md  压缩 降级 遗忘策略表 + SLO 护栏（窗口、Top-K、TTL、超限处理）.md  基于Rust的上下文工程 记忆管理系统框架开发.md
examples/: async_demo.py  deepseek_budget.py  deepseek_integrated.py  deepseek_loop.py  deepseek_planning.py  langchain_deepseek.py  observability_demo.py  policy_demo.py
python/: README.md  pyproject.toml
python/scripts/: bench_backends.py  bench_config.py  load_test.py  soak_test.py
python/src/engram/: __init__.py  client.py
python/src/engram/adapters/: __init__.py  langchain.py  langgraph.py
python/tests/: test_backends.py
scripts/: criterion_report.py
