[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "engram"
version = "0.1.0"
description = "Python SDK for the Engram memory system"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Engram" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
python-source = "src"
module-name = "engram._core"
bindings = "pyo3"
manifest-path = "../crates/engram-ffi/Cargo.toml"
