[package]
name = "engram-ffi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
engram-store = { path = "../engram-store" }
engram-types = { path = "../engram-types" }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
pyo3-log = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
mysql = ["engram-store/mysql"]
postgres = ["engram-store/postgres"]
