[package]
name = "engram-store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
serde_json = "1"
engram-types = { path = "../engram-types" }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "build_memory_packet"
harness = false
